Resolved Code Inspection issues